refactor: use repoId as unique identifier
Signed-off-by: WuShaoling <wsl6@outlook.com>

--- a/app/plugin/gitee/package.json
+++ b/app/plugin/gitee/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mentor-bot-gitee-manager",
-  "description": "Gitee manager for mentor bot",
+  "name": "hypertrons-gitee-manager",
+  "description": "Gitee manager for hypertrons",
   "eggPlugin": {
     "name": "gitee"
   }
